NumbPad & UsbUnlock function

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,6 +7,28 @@
 
     <string name="title_activity_fullscreen">FullscreenActivity</string>
     <string name="dummy_button">Dummy Button</string>
-    <string name="dummy_content">DUMMY\nCONTENT</string>
+    <string name="dummy_content"></string>
+    <string name="gate_unlock">GATE IS UNLOCKED!</string>
+    <string name="some_message">SOME\nMESSAGE</string>
+    <string name="button_text">LOCK</string>
+
+
+    <string name="pin_code_hidden_view">*</string>
+    <string name="one">1</string>
+    <string name="two">2</string>
+    <string name="three">3</string>
+    <string name="four">4</string>
+    <string name="five">5</string>
+    <string name="six">6</string>
+    <string name="seven">7</string>
+    <string name="eight">8</string>
+    <string name="nine">9</string>
+    <string name="zero">0</string>
+    <string name="Clear">CLEAR</string>
+    <string name="dot">.</string>
+    <string name="title_activity_usb_unlock">UsbUnlock</string>
+
+
+
 
 </resources>
